Bug 441275 - I get two holiday updates instead of one. And The indiannational calendar isn't working
Summary: I get two holiday updates instead of one. And The indiannational calendar isn...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kholidays
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-21 06:59 UTC by Riyadul Islam Mollick
Modified: 2022-04-23 13:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
foo.txt - verbose file (191.01 KB, text/plain)
2021-08-21 06:59 UTC, Riyadul Islam Mollick
Details
Showing multiple holidays insted of one (134.53 KB, image/png)
2021-08-21 07:01 UTC, Riyadul Islam Mollick
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Riyadul Islam Mollick 2021-08-21 06:59:56 UTC
Created attachment 140896 [details]
foo.txt - verbose file

SUMMARY
I get two-holiday updates instead of one. Some of the holidays are showing the wrong date. and The indiannational/Bengali calendar isn't working.

STEPS TO REPRODUCE
1. Open Digital Clock Widget Setting
2. Go to Calendar Setting
3. Select Holiday
4. Select Bangladesh Holiday from the holiday select page
5. log out to take changes.

OBSERVED RESULT
- Show incorrect holidays and multiple holidays instead of one. Indiannational calendar isn't working


EXPECTED RESULT
- Show the right holidays on the right dates and show Indiannational holidays.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux/5.22.4
(available in About System)
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Riyadul Islam Mollick 2021-08-21 07:01:09 UTC
Created attachment 140897 [details]
Showing multiple holidays insted of one
Comment 2 Allen Winter 2021-09-06 13:29:48 UTC
I don't see any such duplications in KOrganizer
Comment 3 Riyadul Islam Mollick 2021-09-07 05:30:18 UTC
I checked again. In Korganizer it's works fine but indiannational calender dates still not showing.

The problem occurs in digital clock widget on plasma desktop.
Comment 4 Bug Janitor Service 2022-02-26 18:21:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kholidays/-/merge_requests/33
Comment 5 Allen Winter 2022-03-06 14:11:08 UTC
Git commit 1832341a155fbdaeb7a996211f4e8d08725a53af by Allen Winter, on behalf of Alois Spitzbart.
Committed on 06/03/2022 at 14:09.
Pushed by winterz into branch 'master'.

Remove double entries and correct indian-
national calendar

A  +22   -0    autotests/holiday_calendar_systems
M  +14   -0    autotests/testholidayregion.cpp
M  +1    -0    autotests/testholidayregion.h
M  +1    -1    src/parsers/plan2/holidayscannerplan.cpp
M  +1    -1    src/parsers/plan2/holidayscannerplan.lpp

https://invent.kde.org/frameworks/kholidays/commit/1832341a155fbdaeb7a996211f4e8d08725a53af
Comment 6 Alois Spitzbart 2022-04-23 13:19:27 UTC
Git commit 8ca4f31d0654fcaa407fe36e70f5e6f9e1d932bf by Alois Spitzbart.
Committed on 26/02/2022 at 18:06.
Pushed by winterz into branch 'master'.

Remove double entries and correct indian-
national calendar

A  +22   -0    autotests/holiday_calendar_systems
M  +14   -0    autotests/testholidayregion.cpp
M  +1    -0    autotests/testholidayregion.h
M  +1    -1    src/parsers/plan2/holidayscannerplan.cpp
M  +1    -1    src/parsers/plan2/holidayscannerplan.lpp

https://invent.kde.org/frameworks/kholidays/commit/8ca4f31d0654fcaa407fe36e70f5e6f9e1d932bf
Comment 7 Alois Spitzbart 2022-04-23 13:19:35 UTC
Git commit 6ade17c53528e41a517a44574d0292e4404ab234 by Alois Spitzbart.
Committed on 26/02/2022 at 19:15.
Pushed by winterz into branch 'master'.

Remove double entries and correct indian-
national calendar

A  +22   -0    autotests/holiday_calendar_systems
M  +14   -0    autotests/testholidayregion.cpp
M  +1    -0    autotests/testholidayregion.h
M  +1    -1    src/parsers/plan2/holidayscannerplan.cpp
M  +1    -1    src/parsers/plan2/holidayscannerplan.lpp

https://invent.kde.org/frameworks/kholidays/commit/6ade17c53528e41a517a44574d0292e4404ab234