Remove double entries and correct indian- national calendar

BUG: 441275